# waypaper_rs

./: Cargo.toml  README.md  README_EN.md  build.rs
examples/: red_square.rs  video_test.rs
protocol/: wayland.xml
src/: lib.rs  main.rs
src/cli/: mod.rs
src/ipc/: client.rs  mod.rs  protocol.rs  server.rs
src/protocols/: mod.rs
src/wallpaper/: mod.rs  player.rs  project.rs  video.rs  video_hw.rs
src/wayland/: mod.rs  wayland.rs  wayland_protocol.rs
