[package]
name = "waypaper-rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "waypaper_rs"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11.8"
tokio = { version = "1.49.0", features = ["full"] }
log = "0.4.29"
wayland-client = "0.31.12"
wayland-protocols = { version = "0.32.5", features = ["client"] }
wayland-protocols-wlr = { version = "0.3.5", features = ["client"] }
wayland-scanner = "0.31.0"
memmap2 = "0.9"
tempfile = "3"
ffmpeg-next = { version = "8", features = ["codec", "filter", "software-scaling"] }
